# fugou

./: .gitignore  LICENSE  LICENSE.ja  README
doc/: fugou_shiyosho.odt
omoide/: make.sh
omoide/src/DH/: DH.h  Makefile  dh_clear.c  dh_dekey.c  dh_enkey.c  dh_free.c  dh_keygen.c  dh_keyhash.c  dh_makeG.c  dh_malloc.c
omoide/src/base64/: Makefile  base64.c  base64.h  ss.c
omoide/src/camellia/: Makefile  camellia.h  camellia_F.c  camellia_FL.c  camellia_FL_1.c  camellia_cBytes.c  camellia_cbc.c  camellia_debug.c  camellia_decrypt.c  camellia_destroy.c  camellia_encrypt.c  camellia_hash.c  camellia_hkaiten.c  camellia_keycopy.c  camellia_keygen.c  camellia_padding.c  camellia_putx.c  camellia_subkey_generate.c
omoide/src/esign/: SP_esign.c  VP_esign.c  emsa_esign_encode.c  emsa_esign_verify.c  esign.h  esign_io.c  esign_kagiseisei.c  ssa_esign_sign.c  ssa_esign_verify.c
omoide/src/par2/: Makefile  par2.c  par2.h  par2_table.c  (+1 more)
omoide/梅暗号/: yattane.txt
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.am.escape  NEWS  README  assert_xxx.c  assert_xxx.h  export.sh  libfugou.c  libfugou.h  libfugou_base.h  libfugou_sample.c  logger_jikken.c  loop.c  macro_cat.c  makefile  memo  sed.slot  sed.tmp  sed.tmp.2  sed.tmp.3  setup.py  setup_montgomery.py  test_libfugou.c
src/bar_ext/: gdbinit  gdbinit.fail  gdbinit.good  samp2.py  setup_bar.py
src/bar_ext/bar/: __init__.py  pybar.c
src/camellia/: Makefile.am  Makefile.omoide  camellia.c  camellia.h  camellia.py  functions.list  pycamellia.c  test_camellia.py  test_porker.py  test_speed.py
src/ecc/: ecdh.py  ecdsa.py  generate_points_on_ec.py  math_154.py  setup.py  test_ecc.py  test_speed.py
src/ecc/ecc/: __init__.py  _gcdext.c  lib.py  operands.py  test_speed_gcdext.py
src/foo/: baz.py
src/foo_ext/: gdbinit  pyfoo.c  samp2.py  setup_foo.py  test_foo.py
src/libfugou/: Makefile  Makefile.template  assert_xxx.h  libfugou.c  libfugou.h  libfugou.map  libfugou_base.h  test_libfugou.c
src/make_chain/: Makefile
src/make_chain/dirA/: Makefile
src/make_chain/dirB/: Makefile
src/montgomery/: __init__.py  benchmark_speed.py  debug_gcdext.py  montgomery_py3.py  pymontgomery.c  test_init.py  test_montgomery.py
src/oraga/: oraga.py  test_oraga.py
src/par2/: expected.vm  gdbinit  p2_inherit.py  sample_gf_and_gfi.py  sample_vandermonde.py
src/par2/par2/: Makefile.omoide  __init__.py  a.py  abst.py  accquire_n.c  accquire_n.py  archive.py  compare_speed.c  compare_speed.py  const.py  cur.py  derive_c_function_names.sh  endian.c  fo.py  funcsions.h  galois.c  galois.c.64bit.diff  galois.py  gdbinit  libpar2_sample.c  libpar2_sample.sh  libpar2_sample_recovery.sh  libpar2_test.c  make_random.py  mem.c  mkstmp.c  p2.py  par2.c  par2.h  py3.py  pypar2.c  pypar2.h  stv.h  test_bytes_and_struct.py  test_par2.py  test_speed.py  tool.h  ull.c  util.py
src/reed_solomon/: Makefile  a.c  calc_slot.py  calc_slot_speed.py  dot.gdbinit  expected_vm_of_rsx.c  for_define.c  guard.c  junk.c  matrix.py  q.txt  random_1048576.bin.sha256sum  rs.c  rs.h  rsf.c  rsf.h  test_rs.c
src/sha/: Makefile.am  Makefile.in.old  Makefile.old  omoide.sha1.c  omoide.sha1_sample.c  omoide.sha1_sample2.c  sha.c  sha.h  sha_private.h  sha_sample.c  sha_test.c  sha_test.h
src/slot/: Makefile  junk.c  random_1048576.bin.sha256sum  sample_slot_of_block.c  sample_slot_of_rs.c  sample_slot_of_stream.c  slot.c  slot.h  slot_fseek.c  test_slot.c
src/tsa/tsa/: __init__.py
(+105 files in other folders)
