lib_LTLIBRARIES=libcamellia.la
libcamellia_la_SOURCES= \
  camellia.h camellia_cBytes.c camellia_destroy.c \
  camellia_keycopy.c camellia_subkey_generate.c \
  camellia_F.c camellia_cbc.c camellia_encrypt.c \
  camellia_keygen.c pycamellia.c camellia_FL.c \
  camellia_debug.c camellia_hash.c \
  camellia_padding.c camellia_FL_1.c \
  camellia_decrypt.c camellia_hkaiten.c \
  camellia_putx.c
